# py-chatty

./: .gitignore  README.md  chatapp.py  chatty.py  pyproject.toml  ragapp.py  requirements.txt
shared/: defns.py  rag.py  utils.py  views.py
