[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "shiny==1.2.1",
    "tokenizers==0.21.0",
    "faiss-cpu>=1.9.0.post1",
    "huggingface-hub>=0.27.1",
    "instructorembedding>=1.0.1",
    "langchain>=0.3.15",
    "langchain-community==0.3.15",
    "langchain-core==0.3.31",
    "langchain-ollama==0.2.2",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.4.0",
    "streamlit>=1.41.1",
    "tabulate>=0.9.0",
    "tiktoken>=0.8.0",
    "unstructured==0.16.15",
    "langchain-chroma==0.2.1",
    "faicons==0.2.2",
    "docx2txt==0.8",
]
